Modernize BuildRequirementsAnalyzer for Java 25
Style/feature update only — no architectural changes; the monolith-split
refactor still lives in the memory backlog. Highlights:

- JEP 511 module imports: 13 individual JDK imports collapsed to
  `import module java.base;` + `import module java.xml;`.
- JEP 467 markdown Javadoc: class + 3 method comments converted from
  HTML `<p>`/`<a>`/`{@code …}` to `///` with `[text](url)` and
  backtick code spans.
- Modern stdlib factories: `Paths.get` → `Path.of`; `new Date()` →
  `ZonedDateTime.now().format(...)`. Date format preserved exactly
  with `Locale.ENGLISH` so `PDT`-style zone abbreviations render
  (`Locale.ROOT` lacks localized zone names and falls back to
  `GMT-07:00`).
- `Map.forEach(this::printArtifactLine)` replaces 8 near-identical
  `Map.Entry` for-loops.
- JEP 456 unnamed variable: `catch (Exception _)` for the
  fall-through-on-failure case.
- Drop FQN prefixes now covered by module imports: `JarFile`,
  `JarEntry`, `InputStream`, `URI.create`, `Arrays.copyOfRange`.

File shrinks from 1060 → 1028 lines. Verified end-to-end against
`quickstart-example`: same 435-artifact count and identical date
format as before. No preview-feature warnings — every feature used
is final in JDK 25.

Assisted-by: Claude Opus 4.7 <noreply@anthropic.com>